--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .Background{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-image: url(../imgs/seamless-gold-rhombus-grid-pattern-black-background_53876-97589.webp);
+  }
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .App-header{
+    background-color: #282c34;
+    min-height: 1vh;
+    padding: 5px 0;
+    border-radius: 30px;
+    margin: 5px;
+    width: 100%;
+    max-height: 100px;
+    color: white;
+    font-size: calc(6px + 1vmin);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .CMS-Form{
+   padding: 40px;
+   background-color: #dde0ee ;
+   display: flex;
+   justify-content: center;   
+   align-items: center;
+   margin: auto;
+   max-width: 300px;
+   border: 3px;
+   border-style: groove;
+   border-radius: 40px;
   }
-}
+    /* display: "flex", justifyContent: "center", alignItems:"center", */
+    /* // padding: '5px', margin : "auto", justifyItems: "center",  */
+    /* background: "#DDE2EC", maxWidth: "500px", borderStyle: "ridge"} */
+  .App-link {
+    color: #61dafb;
+  }
+  
+  .App-Bar {
+    padding: 7px;
+    color: white;
+    text-decoration: none;
+    margin: 20px;
+    border: 1px;
+    border-radius: 10px;
+    /* border-style: ridge; */
+    /* border-color: white; */
+  }
+  
+  .App-Bar:hover {
+    color: yellow;
+    font-size: 20px;
+  }
+  
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
