--- a/src/App.css
+++ b/src/App.css
@@ -1,79 +1,61 @@
 .App {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-  .Background{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-    background-repeat: repeat-y;
-    background-image: url(../imgs/seamless-gold-rhombus-grid-pattern-black-background_53876-97589.webp);
-  }
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  .App-header{
-    background-color: #282c34;
-    min-height: 1vh;
-    padding: 5px 0;
-    border-radius: 30px;
-    margin: 5px;
-    width: 100%;
-    max-height: 100px;
-    color: white;
-    font-size: calc(6px + 1vmin);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .CMS-Form{
-   padding: 40px;
-   background-color: #dde0ee ;
-   display: flex;
-   justify-content: center;   
-   align-items: center;
-   margin: auto;
-   max-width: 300px;
-   border: 3px;
-   border-style: groove;
-   border-radius: 40px;
-  }
-    /* display: "flex", justifyContent: "center", alignItems:"center", */
-    /* // padding: '5px', margin : "auto", justifyItems: "center",  */
-    /* background: "#DDE2EC", maxWidth: "500px", borderStyle: "ridge"} */
-  .App-link {
-    color: #61dafb;
-  }
-  
-  .App-Bar {
-    padding: 7px;
-    color: white;
-    text-decoration: none;
-    margin: 20px;
-    border: 1px;
-    border-radius: 10px;
-    /* border-style: ridge; */
-    /* border-color: white; */
-  }
-  
-  .App-Bar:hover {
-    color: yellow;
-    font-size: 20px;
-  }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 960px;
+  background-position: center;
+  background-size: cover;
+  background-image: url(../imgs/Photo-Background-Application.jpg);
+}
+
+.Container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-header {
+  background: linear-gradient(to right, white, rgb(151, 199, 111), white);
+  border-radius: 10px;
+  padding: 5px 0px;
+  width: 100%;
+  color: white;
+  font-size: calc(10px + 1vmin);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.nav-link-bar {
+  display: flex;
+  align-items: center;
+  width: 230px;
+  justify-content: space-evenly;
+}
+
+.nav-link-button {
+  width: 100px;
+  border-radius: 50px;
+  background: linear-gradient(to top, rgb(222, 233, 220), rgb(191, 212, 148));
+  align-items: center;
+  text-align: center;
+}
+.nav-link {
+  text-decoration: none;
+  color: black;
+  margin: 0px 20px;
+}
+
+.nav-link:hover {
+  color: yellow;
+}
