--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 960px;
+  height: 100%;
   background-position: center;
   background-size: cover;
   background-image: url(../imgs/Photo-Background-Application.jpg);
 }
 
 .Container {
+  margin-top: 8em;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -18,16 +19,27 @@
   height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background: linear-gradient(to right, white, rgb(151, 199, 111), white);
+  position: fixed;
+  background: linear-gradient(to right, white, rgb(74, 119, 74), rgb(116, 177, 69), rgb(26, 114, 26), white);
   border-radius: 10px;
   padding: 5px 0px;
   width: 100%;
+  color: white;
+  font-size: calc(10px + 1vmin);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.App-footer {
+  margin-top: 1.5em;
+  background: linear-gradient(to right, white, rgb(74, 119, 74), rgb(116, 177, 69), rgb(26, 114, 26), white);
+  border-radius: 10px;
+  padding: 5px 0px;
+  width: 100%;
+  height: 135px;
   color: white;
   font-size: calc(10px + 1vmin);
   display: flex;
