--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 }
 
 .App-footer {
+  position: sticky;
   margin-top: 1.5em;
   background: linear-gradient(to right, white, rgb(74, 119, 74), rgb(116, 177, 69), rgb(26, 114, 26), white);
   border-radius: 10px;
